# Local-GPU-Orchestration

./: .dockerignore  .flake8  .gitattributes  .gitignore  DEVELOPER.md  Dockerfile  IMPLEMENTATION_PLAN.md  Makefile  README.md  configure.ps1  configure.sh  docker-compose.monitoring.yml  docker-compose.yml  orchestrator.db  pyproject.toml  run.ps1  run.sh
.github/workflows/: ci.yml  integration-tests.yml
control_plane/: __init__.py  discovery.py  gang_scheduler.py  grpc_server.py  main.py  metrics.py  scheduler.py
control_plane/database/: models.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: cluster_overview.json  node_detail.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: jsonapi.yml
proto/: orchestrator.proto
scripts/: check_sysfs.py  compile_protos.py  configure.py
scripts/linux/: setup.sh  start_worker.sh
scripts/windows/: common.ps1  setup.ps1  start_control_plane.ps1  start_worker.ps1
tests/: conftest.py  test_discovery.py  test_e2e.py  test_gang_e2e.py  test_grafana_jobs.py  test_metrics_integration.py
tests/control_plane/: test_api.py  test_gang_dispatch.py  test_gang_scheduler.py  test_grpc_server.py  test_metrics.py  test_models.py  test_scheduler.py
tests/worker_agent/: conftest.py  test_client.py  test_config.py  test_executor.py  test_main.py  test_metrics.py
tests/worker_agent/hal/: __init__.py  conftest.py  test_amd_sysfs.py  test_base.py  test_manager.py  test_nvidia.py  test_simulated.py
worker_agent/: __init__.py  client.py  config.py  discovery.py  executor.py  main.py  metrics.py
worker_agent/hal/: __init__.py  amd_sysfs.py  base.py  manager.py  nvidia.py  simulated.py
