[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["control_plane", "worker_agent"]

[project]
name = "gpu-orchestrator"
version = "0.1.0"
description = "A distributed, performance-aware GPU workload orchestrator"
readme = "IMPLEMENTATION_PLAN.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "grpcio",
    "grpcio-tools",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "asyncpg",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
]
dev = [
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
