[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["control_plane", "worker_agent", "worker_agent.hal"]

[project]
name = "gpu-orchestrator"
version = "0.2.0"
description = "A distributed, performance-aware GPU workload orchestrator"
readme = "IMPLEMENTATION_PLAN.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "grpcio",
    "grpcio-tools",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "asyncpg",
    "psutil",
]

[project.optional-dependencies]
nvidia = ["pynvml"]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
]
dev = [
    "black",
    "isort",
    "flake8",
    "bandit",
]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "hardware: marks tests that require physical GPU hardware (deselect with '-m not hardware')",
    "nvidia: marks tests specific to NVIDIA GPU hardware",
    "amd: marks tests specific to AMD GPU hardware",
]

